[package]
name = "refinery-warp-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync"] }
warp = "0.2"
thiserror = "1.0"
refinery = { version = "0.3", features = ["tokio-postgres"]}
tokio-postgres = "0.5.3"
